<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fillbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/add_book"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Orange"
                android:visibility="invisible" />

            <Button
                android:id="@+id/butScan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Scan" >
            </Button>

            <TextView
                android:id="@+id/tvOR"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="(OR)"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Book_arrays" />

            <EditText
                android:id="@+id/edt_bukname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/book_name"
                android:inputType="textPersonName"
                android:textSize="15dp"
                android:textStyle="bold" >
            </EditText>

            <EditText
                android:id="@+id/edt_Author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Author"
                android:inputType="textPersonName"
                android:textSize="15dp"
                android:textStyle="bold" >
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/buk_purchase_date"
                    android:inputType="date"
                    android:textSize="15dp"
                    android:textStyle="bold" >
                </EditText>

                <ImageButton
                    android:id="@+id/Img_but_calender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/buk_image"
                    android:src="@drawable/calender" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textSize="15dp"
                android:textStyle="bold" >
            </EditText>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/bukImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/img_shadow"
                    android:contentDescription="@string/buk_image"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/empty_photo" />

                <Button
                    android:id="@+id/pick_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_toRightOf="@id/bukImage"
                    android:text="@string/buk_image" />

                <RatingBar
                    android:id="@+id/rtBook"
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pick_image"
                    android:layout_toRightOf="@id/bukImage"
                    android:numStars="5"
                    android:rating="1"
                    android:requiresFadingEdge="vertical"
                    android:stepSize="1.0" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save_data"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1.0"
                android:text="@string/buk_save" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>